[wip] students paths

--- a/core/app/views/gaku/students/_tab_menu.html.slim
+++ b/core/app/views/gaku/students/_tab_menu.html.slim
@@ -7,7 +7,7 @@
             = print_count(@student.addresses.count, t('addresses.plural'))
         li
           a#student-guardians-tab-link data-toggle="tab" href="#guardians"
-            = print_count(@student.guardians.count, t('guardians.guardians'))
+            /= print_count(@student.guardians.count, t('guardians.guardians'))
         li
           a#student-course-enrollments-tab-link data-toggle="tab" href="#courses"
             = print_count(@student.courses.count, t('courses.plural'))
