--- a/core/app/views/gaku/students/index.js.erb
+++ b/core/app/views/gaku/students/index.js.erb
@@ -1,1 +1,1 @@
-$("#students-index").html("<%= escape_javascript(render("students/students")) %>");
+$("#students-index").html("<%= escape_javascript(render("gaku/students/students")) %>");
