--- a/core/app/views/gaku/students/guardians/_guardians.html.slim
+++ b/core/app/views/gaku/students/guardians/_guardians.html.slim
@@ -4,7 +4,7 @@
   .row-fluid
     .pull-left
       h4.mt-xs.mb-0.student-guardians-count
-        = print_count(@student.guardians.count, t('guardians.list'))
+        /= print_count(@student.guardians.count, t('guardians.list'))
     .pull-right
       = ajax_link_to_new t('guardians.add'), new_student_guardian_path(@student), :id => "new-student-guardian-link"
   .row-fluid
@@ -14,7 +14,7 @@
     .span12
       .row-fluid
         .span12.well.guardians_list
-          =render :partial => 'students/guardians/guardian', :collection => @student.guardians, :as => 'guardian'
+          /=render :partial => 'gaku/students/guardians/guardian', :collection => @student.guardians, :as => 'guardian'
 
       /table.table.table-striped.table-bordered.table-condensed
         thead
@@ -27,4 +27,4 @@
             th =t("guardians.relationship")
             th =t("options")
         tbody
-          =render :partial => 'students/guardian', :collection => @student.guardians, :as => 'guardian'
+          =render :partial => 'gaku/students/guardian', :collection => @student.guardians, :as => 'guardian'
