--- a/core/app/views/gaku/syllabuses/exams/_exams.html.slim
+++ b/core/app/views/gaku/syllabuses/exams/_exams.html.slim
@@ -10,7 +10,7 @@
         th.btn-info style="width:94px" =t 'manage'
     tbody
       - if @syllabus.exam_syllabuses.any?
-        = render :partial => 'syllabuses/exams/exam', :collection => @syllabus.exam_syllabuses, :as => :exam_syllabus
+        = render :partial => 'gaku/syllabuses/exams/exam', :collection => @syllabus.exam_syllabuses, :as => :exam_syllabus
       - else
         .alert.alert-danger.no-exam-msg
           = t('notice.no_exams')
