--- a/core/app/views/gaku/notes/_note.html.slim
+++ b/core/app/views/gaku/notes/_note.html.slim
@@ -1,4 +1,4 @@
 -unless note.nil? or note.new_record? or !note
 	tr id="note-#{note.id}"
-	  = render 'shared/fields/note_fields', :note => note
-	  = render 'notes/buttons', :note => note
+	  = render 'gaku/shared/fields/note_fields', :note => note
+	  = render 'gaku/notes/buttons', :note => note
