--- a/core/app/views/gaku/students/addresses/validation_errors.erb
+++ b/core/app/views/gaku/students/addresses/validation_errors.erb
@@ -1,5 +1,5 @@
 <%- if params[:action] == 'create' %>
-  $('#validation-errors').html("<%= render_js_partial('shared/errors', {:target => @address}) %>");
+  $('#validation-errors').html("<%= render_js_partial('gaku/shared/errors', {:target => @address}) %>");
 <%- elsif params[:action] == 'update' %>
-  $('#validation-errors').html("<%= render_js_partial('shared/errors', {:target => @address}) %>");
+  $('#validation-errors').html("<%= render_js_partial('gaku/shared/errors', {:target => @address}) %>");
 <% end %>
