--- a/core/app/views/gaku/students/show.html.slim
+++ b/core/app/views/gaku/students/show.html.slim
@@ -11,4 +11,4 @@
       .span12
         = render 'gaku/students/showtable'
 
-= javascript_include_tag "students/show"
+= javascript_include_tag "gaku/students/show"
