--- a/core/app/views/gaku/students/contacts/_form.html.slim
+++ b/core/app/views/gaku/students/contacts/_form.html.slim
@@ -3,7 +3,7 @@
   b= t('contacts.new')
   .row-fluid.mt-l
     .span12.well
-      = render 'shared/form_fields/contact_form_fields',  :contact_form => contact_form
+      = render 'gaku/shared/form_fields/contact_form_fields',  :contact_form => contact_form
       
       .row-fluid
         .span12
@@ -11,4 +11,4 @@
             = submit_button t('contacts.save'), :id => 'submit-student-contact-button'
           = link_to_cancel :id => 'cancel-student-contact-link'
 
-= javascript_include_tag 'students/contacts'
+= javascript_include_tag 'gaku/students/contacts'
