--- a/core/app/views/gaku/students/_students.html.slim
+++ b/core/app/views/gaku/students/_students.html.slim
@@ -11,7 +11,7 @@ table#students-index.index.table.table-striped.table-bordered.table-condensed
       th.btn-inverse = student_sortable "seat_number", t('class_group_enrollments.seat_number')
       th.btn-inverse = student_sortable "admitted", t('students.admitted')
       th.btn-inverse = student_sortable "primary_address", t('addresses.primary')
-      - if params[:controller] == "students" or params[:controller] == "admissions"
+      - if params[:controller] == "gaku/students" or params[:controller] == "gaku/admissions"
         th.btn-info style="width:62px" = t("manage")
 
   tbody
