--- a/core/app/views/gaku/students/class_group_enrollments/_new_modal.html.slim
+++ b/core/app/views/gaku/students/class_group_enrollments/_new_modal.html.slim
@@ -1,4 +1,4 @@
-- model = @class_group_enrollment || ClassGroupEnrollment.new
+- model = @class_group_enrollment || Gaku::ClassGroupEnrollment.new
 - model_class = model.class
 .modal.hide#new-class-group-enrollment-modal wmode="opaque"
   
@@ -25,7 +25,7 @@
       .form-inputs
         .field
           = f.label t('class_group_enrollments.class_groups')
-          = f.select :class_group_id, ClassGroup.all.collect { |s| ["#{s.name} ", s.id] }, {:prompt => t('students.choose_class group')}
+          = f.select :class_group_id, Gaku::ClassGroup.all.collect { |s| ["#{s.name} ", s.id] }, {:prompt => t('students.choose_class group')}
         br/
         .field
           = f.label t('class_group_enrollments.seat_number')
