--- a/core/app/views/gaku/shared/menu/_admin.html.erb
+++ b/core/app/views/gaku/shared/menu/_admin.html.erb
@@ -1,18 +1,18 @@
-<li class="dropdown">
+<li class="dropdown" data-hook="admin_menu">
   <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
     <%= t("admin.admin") %>
     <b class="caret"></b>
   </a>
   <ul class="dropdown-menu">
-    <li><%= link_to t("admin.schools"), admin_schools_path %></li>
+    <li data-hook="schools"><%= link_to t("admin.schools"), admin_schools_path %></li>
     <li class="dropdown-submenu">
       <a tabindex='-1' href='#'><%= t('admin.presets.types') %></a>
       <ul class="dropdown-menu">
-        <li><%= link_to t("admin.contact_types"), admin_contact_types_path %></li>
-        <li>
+        <li data-hook="contact_types"><%= link_to t("admin.contact_types"), admin_contact_types_path %></li>
+        <li data-hook="enrollment_status_types">
           <%= link_to t("admin.enrollment_status_types"), admin_enrollment_status_types_path %>
         </li>
-        <li>
+        <li data-hook="commute_method_types">
           <%= link_to t("commute_method_types.plural"), admin_commute_method_types_path %>
         </li>
       </ul>
@@ -20,18 +20,18 @@
     <li class="dropdown-submenu">
       <a tabindex='-1' href='#'><%= t('admin.presets.presets') %></a>
       <ul class="dropdown-menu">
-        <li><%= link_to t("admin.presets.student"), students_admin_presets_path %></li>
-        <li><%= link_to t("admin.presets.locale"), locale_admin_presets_path %></li>
+        <li data-hook="student_presets"><%= link_to t("admin.presets.student"), students_admin_presets_path %></li>
+        <li data-hook="locale_presets"><%= link_to t("admin.presets.locale"), locale_admin_presets_path %></li>
       </ul>
     </li>
     <li class="dropdown-submenu">
       <a tabindex='-1' href='#'><%= t('admin.disposals') %></a>
       <ul class="dropdown-menu">
-        <li><%= link_to t("admin.exams_disposals"), exams_admin_disposals_path %></li>
-        <li>
+        <li data-hook="exam_disposals"><%= link_to t("admin.exams_disposals"), exams_admin_disposals_path %></li>
+        <li data-hook="attachment_disposals">
           <%= link_to t("admin.attachments_diposals"), attachments_admin_disposals_path %>
         </li>
-        <li>
+        <li data-hook="course_group_disposals">
           <%= link_to t("admin.course_groups_diposals"), course_groups_admin_disposals_path %>
         </li>
       </ul>
