--- a/core/app/views/gaku/students/guardians/addresses/_form.html.slim
+++ b/core/app/views/gaku/students/guardians/addresses/_form.html.slim
@@ -10,5 +10,5 @@
               = submit_button t('addresses.save'), :id => 'submit-student-guardian-address-button'
             = link_to_cancel :id => 'cancel-student-guardian-address-link'
   
-= javascript_include_tag 'students/guardians/addresses'
-= javascript_include_tag 'shared/address'
+= javascript_include_tag 'gaku/students/guardians/addresses'
+= javascript_include_tag 'gaku/shared/address'
