Fix core gaku gems and deface

--- a/core/app/views/gaku/shared/menu/_admin.html.erb
+++ b/core/app/views/gaku/shared/menu/_admin.html.erb
@@ -1,4 +1,4 @@
-<li class="dropdown" data-hook="admin_menu" id="admin_menu">
+<li class="dropdown" data-hook="admin_menu">
   <a class="dropdown-toggle" data-toggle="dropdown" href="#"> 
     <%= t("admin.admin") %>
     <b class="caret"></b>
