--- a/core/app/views/gaku/home/index.html.slim
+++ b/core/app/views/gaku/home/index.html.slim
@@ -9,5 +9,5 @@
         .span12
           = render :partial => 'user_menu'
     - else
-      | 下のリンクからログインしてください。
+      | 下記のリンクからログインを行ってください。
       #{link_to t("devise.sign_in"), new_user_session_path}
