--- a/core/app/views/gaku/exams/grading.html.slim
+++ b/core/app/views/gaku/exams/grading.html.slim
@@ -1,14 +1,14 @@
 .grading-container
 
 javascript:
-  var examsForGrade = '#{@exams.to_json(:include => {:exam_portions => {:include => :exam_portion_scores}}).to_s.html_safe}'
-  var course = '#{@course.to_json.to_s.html_safe}'
-  var student_total_scores = '#{@student_total_scores.to_json.to_s.html_safe}'
-  var exam_averages = '#{@exam_averages.to_json.to_s.html_safe}'
-  var deviation = '#{@deviation.to_json.to_s.html_safe}'
-  var students = '#{Gaku::Student.decrypt_student_fields(@students).to_s.html_safe}'
-  var grades = '#{@grades.to_json.to_s.html_safe}'
-  var ranks = '#{@ranks.to_json.to_s.html_safe}'
+  var examsForGrade = '#{@exams.to_json(:include => {:exam_portions => {:include => :exam_portion_scores}},  :root => false).to_s.html_safe}'
+  var course = '#{@course.to_json(:root => false).to_s.html_safe}'
+  var student_total_scores = '#{@student_total_scores.to_json().to_s.html_safe}'
+  var exam_averages = '#{@exam_averages.to_json(:root => false).to_s.html_safe}'
+  var deviation = '#{@deviation.to_json(:root => false).to_s.html_safe}'
+  var students = '#{@students.to_json(:root => false).to_s.html_safe}'
+  var grades = '#{@grades.to_json(:root => false).to_s.html_safe}'
+  var ranks = '#{@ranks.to_json(:root => false).to_s.html_safe}'
 
 coffee:
   $(document).ready ->
@@ -22,22 +22,3 @@ coffee:
       grades: $.parseJSON(grades)
       ranks: $.parseJSON(ranks)
     Backbone.history.start()
-
-    tableSizeFix = ->
-      $("html").css "overflow-x", "hidden"
-      $("html").css "overflow-y", "hidden"
-      fixW = 303
-      fixW += $(".btn-warning").length * 131
-      if $(".exam_infos").length > 1
-        fixW += ($(".btn-inverse").length - 1) * 76
-        fixW += 302
-      else
-        fixW += $(".btn-inverse").length * 76
-      $(".exam_grid").width(fixW)
-      if fixW > $(window).width() - 80
-        fixW = $(window).width() - 80
-      fixH = $(".exam_grid").height()
-      if fixH > $(window).height() - $(".exam_grid").offset().top - 40
-        fixH = $(window).height() - $(".exam_grid").offset().top - 40
-      $('.exam_grid').tablefix({width: fixW, height: fixH, fixRows: 2, fixCols: 3})
-    tableSizeFix()
