[views] fix sign up button

--- a/core/app/views/gaku/devise/registrations/new.html.slim
+++ b/core/app/views/gaku/devise/registrations/new.html.slim
@@ -21,6 +21,6 @@ div style="width:320px;margin:0 auto;"
               = f.label :password_confirmation, t("devise.password_confirmation")
               = f.password_field :password_confirmation, :class => 'span12'
             .row-fluid.mt-xs
-              = f.submit t("devise.sign_up"), :class => 'span12 btn btn-primary'
+              = f.submit t("devise.registrations.sign_up"), :class => 'span12 btn btn-primary'
         .row-fluid.mt-s
           = render "devise/shared/links"
