--- a/core/app/views/gaku/students/guardians/_new_contact_modal.html.slim
+++ b/core/app/views/gaku/students/guardians/_new_contact_modal.html.slim
@@ -9,5 +9,6 @@
 			= render 'gaku/shared/form_fields/contact_form_fields', :contact_form => contact_form
 
 			.actions
-				= contact_form.submit t('students.create_contact'), :id => 'submit-student-guardian-contact-button', :class => 'btn btn-primary'
-				= link_to_cancel :id => 'cancel-student-guardian-contact-link', :class => 'btn'
+				.span8
+					= submit_button t('students.create_contact'), :id => 'submit-student-guardian-contact-button'
+				= link_to_cancel :id => 'cancel-student-guardian-contact-link'
