--- a/core/app/views/gaku/courses/show.html.slim
+++ b/core/app/views/gaku/courses/show.html.slim
@@ -38,7 +38,7 @@
                 li
                   a#new-course-assignment-tab-link data-toggle="tab" href="#course-assignments" =t("course_enrollments.assignments")
                 li
-                  a#new-course-exam-link data-toggle="tab" href="#course-exams" =t("exams.plural")
+                  a#new-course-exam-link data-toggle="tab" href="#course-exams" = print_count(@course.syllabus.exams.count, t("exams.plural"))
               .tab-content
                 #course-enrollments.tab-pane.active
                   = render :partial => "gaku/courses/enrollments/enrollments"
