--- a/core/app/views/gaku/courses/exams/_exams.html.slim
+++ b/core/app/views/gaku/courses/exams/_exams.html.slim
@@ -1,7 +1,17 @@
 .row-fluid
   - if @course.syllabus and @course.syllabus.exams.any?
-    - @course.syllabus.exams.each do |exam|
-      = link_to ('<i class="icon-white icon-pencil"></i> ' + exam.name + t("grades.grading")).html_safe, "#{request.fullpath}/exams/#{exam.id}/grading", :class => "span3 btn btn-primary grading_link", :params => { :course_id => @course.id, :exam_id => exam.id }
+  		table#course-exams-index.index.table.table-striped.table-bordered.table-condensed
+			  thead
+			    tr
+			      th*{"class" => "btn-inverse"}
+			      	= t("exams.exam_name")
+			      th.btn-info style="width:200px" = t(:manage)
+			  tbody
+			    - @course.syllabus.exams.each do |exam|
+			    	tr
+			    		td = exam.name
+			    		td
+			      		= link_to ('<i class="icon-white icon-pencil"></i> ' + t("grades.grading")).html_safe, "#{request.fullpath}/exams/#{exam.id}/grading", :class => "span3 btn btn-primary grading_link", :params => { :course_id => @course.id, :exam_id => exam.id }
 .row-fluid
   .span12
     hr
