[views] add x to all modals except error modals

--- a/core/app/views/gaku/admin/contact_types/_contact_type_modal.html.slim
+++ b/core/app/views/gaku/admin/contact_types/_contact_type_modal.html.slim
@@ -5,6 +5,7 @@
   = form_for [:admin, model], :remote => true, :html => {:'data-type' => 'script', :class => 'form-horizontal'} do |contact_type_form| 
 
       .modal-header
+        button type="button" class="close" data-dismiss="modal" ×
         h3 =t("contact_types.edit")
       .modal-body
         .row-fluid
