--- a/core/app/views/gaku/class_groups/_class_group_modal.html.slim
+++ b/core/app/views/gaku/class_groups/_class_group_modal.html.slim
@@ -1,6 +1,7 @@
 #class-group-modal.modal.hide
   .modal-header
-    button type="button" class="close" data-dismiss="modal" ×
+    button.close type="button" data-dismiss="modal"
+      'x
     h1 Edit Class Group
   .modal-body
     =render 'form'
