--- a/core/app/views/gaku/shared/_modal_config.html.slim
+++ b/core/app/views/gaku/shared/_modal_config.html.slim
@@ -1,6 +1,7 @@
 #modal-options.modal.hide.fade
   .modal-header
-    button.close data-dismiss="modal" type="button"
+    button.close type="button" data-dismiss="modal"
+      'x
     h3= t "config.label"
   .modal-body
     form.form-horizontal
