--- a/core/app/views/gaku/admin/enrollment_status_types/_enrollment_status_type_modal.html.slim
+++ b/core/app/views/gaku/admin/enrollment_status_types/_enrollment_status_type_modal.html.slim
@@ -3,6 +3,8 @@
   = form_for [:admin, @enrollment_status_type], :remote => true, :html => {:'data-type' => 'script', :class => 'form-horizontal'} do |enrollment_status_type_form| 
 
       .modal-header
+        button.close type="button" data-dismiss="modal"
+          'x
         h3 =t("enrollment_status_types.edit")
       .modal-body
         .row-fluid
