--- a/core/app/views/gaku/admin/schools/_school_modal.html.slim
+++ b/core/app/views/gaku/admin/schools/_school_modal.html.slim
@@ -1,7 +1,10 @@
 - model = @school || School.new
 - model_class = model.class
 #edit-school-modal.modal.hide wmode="opaque"
-
+  .modal-header
+    button.close type="button" data-dismiss="modal"
+      'x
+  .modal-body
   = form_for([:admin, model], :remote => true, :html => {:'data-type' => 'script', :class => 'form-horizontal' }) do |school_form| 
 
       .modal-header
