--- a/core/app/views/gaku/admin/schools/campuses/_campus_modal.html.slim
+++ b/core/app/views/gaku/admin/schools/campuses/_campus_modal.html.slim
@@ -3,6 +3,8 @@
   = form_for([:admin, @school, @campus], :remote => true, :html => {:'data-type' => 'script', :class => 'form-horizontal' }) do |campus_form| 
 
       .modal-header
+        button.close type="button" data-dismiss="modal"
+          'x
         h3 =t("campuses.edit")
       .modal-body
         .row-fluid
