--- a/core/app/views/gaku/courses/enrollments/students/_student_modal.html.slim
+++ b/core/app/views/gaku/courses/enrollments/students/_student_modal.html.slim
@@ -2,8 +2,11 @@
 - model = @course_enrollment || Gaku::CourseEnrollment.new
 - model_class = model.class
 .modal.hide#student-modal wmode="opaque" style="display: block;padding: 41px;position: absolute;left: 500px;top: 300px;width:auto;height:auto;text-align:center;"
-
-  =render 'gaku/students/student_chooser'
-  = link_to_cancel :class => 'span3 btn btn-danger', :id => 'cancel-course-student-link'
+  .modal-header
+    button.close type="button" data-dismiss="modal"
+      'x
+  .modal-body
+    =render 'gaku/students/student_chooser'
+    = link_to_cancel :class => 'span3 btn btn-danger', :id => 'cancel-course-student-link'
 
   
