--- a/admissions/app/views/gaku/admin/admissions/index.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/index.html.slim
@@ -17,10 +17,10 @@
             h4.mt-xs.mb-0 2012年【春期：一般】
           .pull-left
             h4.mt-xs.mb-0.students-count
-              = print_count(@students.count, "合計志願者数：")
+              /= print_count(@students.count, "合計志願者数：")
           .pull-right
             = ajax_link_to_new t("admissions.candidates.new"), new_student_path, :id => "new-student-link", :class => 'mr-s btn btn-primary'
-            /= button t("students.import"), "students/importer", :id => "import-students-link", :class => 'mr-s btn btn-primary'
+
             = button t("admissions.candidates.export"), "students.csv", :id => 'export-students-link', :class => 'btn'
         hr
         .tabbable.mt-s
@@ -42,15 +42,15 @@
             #phase1.tab-pane.active
               .row-fluid.mt-l
                 #new-student.hide
-                  = render 'form'
+                  /= render 'form'
                 =render 'student_chooser'
             #phase2.tab-pane
               .row-fluid.mt-l
                 #new-student.hide
-                  = render 'form'
+                  /= render 'form'
                 =render 'student_chooser'
             #phase3.tab-pane
               .row-fluid.mt-l
                 #new-student.hide
-                  = render 'form'
+                  /= render 'form'
                 =render 'student_chooser'
