--- a/admissions/app/views/gaku/shared/menu/_admissions_sub_menu.html.erb
+++ b/admissions/app/views/gaku/shared/menu/_admissions_sub_menu.html.erb
@@ -1,6 +1,9 @@
 <li class="dropdown-submenu" data-hook="admissions_sub_menu">
   <a tabindex='-1' href='#'><%= t('menu.admissions') %></a>
   <ul class="dropdown-menu">
-    <li data-hook="admission_methods"><%= link_to t("menu.admission.admission_methods"), admin_contact_types_path %></li>
+    <li data-hook="admission_methods"><%= link_to t("menu.admission.admission_methods"), admin_contact_types_path %>
+    </li>
+    <li data-hook="admissions"><%= link_to t("menu.admission.admissions"), admin_admissions_path %>
+    </li>
   </ul>
 </li>
