--- a/core/app/views/gaku/students/_student_form_fields.html.slim
+++ b/core/app/views/gaku/students/_student_form_fields.html.slim
@@ -37,3 +37,7 @@
   /.span6/
     = form.label :graduated, t("graduated"), :class => "control-label"
     = form.text_field :graduated, :class => "span12"
+.row-fluid
+  .span3
+    = form.label :scholarship_status_id, t("scholarship_status"), :class => "control-label"
+    = select("student", "scholarship_status_id", Gaku::ScholarshipStatus.all.collect {|p| [ p.name, p.id ] }, { :include_blank => true })
