[controllers][views][js] add admission_methods/admission_phases functionality

--- a/admissions/app/views/gaku/admin/admission_methods/_admission_method_fields.html.slim
+++ b/admissions/app/views/gaku/admin/admission_methods/_admission_method_fields.html.slim
@@ -1,4 +1,5 @@
 td =admission_method.name
 td
+  = link_to_show [:admin, admission_method]
   = ajax_link_to_edit [:edit, :admin, admission_method]
   = ajax_link_to_delete [:admin, admission_method]
