--- a/admissions/app/views/gaku/admin/admission_methods/admission_phases/edit.js.erb
+++ b/admissions/app/views/gaku/admin/admission_methods/admission_phases/edit.js.erb
@@ -1,2 +1,2 @@
-$('#modal-dialogs').html('<%= render_js_partial("admission_phase_modal", {:admission_phse => @admission_phse}) %>');
+$('#modal-dialogs').html('<%= render_js_partial("admission_phase_modal", {:admission_phase => @admission_phase}) %>');
 $('#edit-admission-method-admission-phase-modal').modal('show');
