[master school/wip] view for master school edit and logic for master school, translations, and etc

--- a/core/app/views/gaku/admin/schools/_form.html.slim
+++ b/core/app/views/gaku/admin/schools/_form.html.slim
@@ -1,3 +1,4 @@
+- @school ||= school
 = form_for [:admin, @school], :remote => true do |school_form|
   - if school_form.object.new_record?
     b= t('schools.new')
