--- a/core/app/views/gaku/shared/menu/_admin.html.erb
+++ b/core/app/views/gaku/shared/menu/_admin.html.erb
@@ -4,7 +4,7 @@
     <b class="caret"></b>
   </a>
   <ul class="dropdown-menu">
-    
+    <li data-hook="school_details"><%= link_to t('admin.school_details'), admin_school_details_path %></li>
     <li data-hook="schools"><%= link_to t("admin.schools"), admin_schools_path %></li>
     
     <li class="dropdown-submenu" data-hook="types_sub_menu">
