--- a/core/app/views/gaku/admin/schools/index.html.slim
+++ b/core/app/views/gaku/admin/schools/index.html.slim
@@ -1,4 +1,5 @@
 #admin-schools
+  =render 'master_school', :master_school => @master_school
   .row-fluid
     #new-admin-school.hide
     .pull-left
@@ -10,6 +11,7 @@
     table#admin-schools-index.index.table.table-striped.table-bordered.table-condensed
       thead
         tr
+          th.btn-inverse Code
           th.btn-inverse =t('schools.name')
           th.btn-inverse =t('schools.campuses')
           th.btn-inverse =t('schools.slogan')
