--- a/admissions/app/views/gaku/admin/admission_methods/admission_phases/_admission_phase_modal.html.slim
+++ b/admissions/app/views/gaku/admin/admission_methods/admission_phases/_admission_phase_modal.html.slim
@@ -42,6 +42,8 @@
             =submit_button t('admission_phases.save'), :id => 'submit-admin-admission-method-admission-phase-button', :class => 'btn btn-primary button span12'
           = link_to_cancel :id => 'cancel-admin-admission-method-admission-phase-link'
 
+= javascript_include_tag "jquery_nested_form" 
+
 css:
   .fields label, .fields input {
     display:inline;
