[js] fix admissions nested_form js

--- a/admissions/app/views/gaku/admin/admission_methods/show.html.slim
+++ b/admissions/app/views/gaku/admin/admission_methods/show.html.slim
@@ -6,3 +6,4 @@
           td = @admission_method.name
 
 = render 'gaku/admin/admission_methods/admission_phases/admission_phases'
+= javascript_include_tag "jquery_nested_form"
