--- a/admissions/app/views/gaku/admin/admissions/index.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/index.html.slim
@@ -7,9 +7,9 @@
   .span12.well
     .row-fluid
       .span6
-        = select :time, :id, {"2012:秋" => "2012/10/00", "2013:春" => "2013/04/00"}, {:prompt => "入学時期選択してください。"}, :class => "span12"
+        = select :time, :id, {"2012:秋" => "2012/10/00", "2013:春" => "2013/04/00"}, {:prompt => t("admissions.please_select_period")}, :class => "span12"
       .span6
-        = select :variety, :id, {"一般入試" => "general", "推薦入試" => "recommend"}, {:prompt => "入学種別選択してください。"}, :class => "span12"
+        = select :variety, :id, {"一般入試" => "general", "推薦入試" => "recommend"}, {:prompt => t("admissions.please_select_method")}, :class => "span12"
     .row-fluid.mt-s
       .span12.well
         .row-fluid
