[refacotr]school show for master

--- a/core/app/views/gaku/admin/schools/show.html.slim
+++ b/core/app/views/gaku/admin/schools/show.html.slim
@@ -1,3 +1,4 @@
+=render 'master_school', :master_school => @school if @school.is_primary?
 .row-fluid
   .span12.well
     table.table.table-bordered.table-striped
@@ -9,7 +10,12 @@ br/
 br/
 .row-fluid
   .span12.well
-    .span4
-      = link_to_edit_with_text [:edit, :admin, @school], :class => "span12 btn btn-warning edit-link", :remote => true
+    -if params[:action] == 'school_details'
+      span4
+        =link_to t('schools.edit_master'), admin_school_details_edit_path, :class => 'btn btn-danger span4', :confirm => t('confirm')
+    -else  
+      -unless @school.is_primary
+        .span4
+          = link_to_edit_with_text [:edit, :admin, @school], :class => "span12 btn btn-warning edit-link", :remote => true 
     .span4
       = link_to_back admin_schools_path, :class => "span12 btn"
