--- a/core/app/views/gaku/students/class_group_enrollments/create.js.erb
+++ b/core/app/views/gaku/students/class_group_enrollments/create.js.erb
@@ -1,3 +1,4 @@
-$('td#class-enrollment-name').html('<%= @class_group.name %>');
+// NEED REFACTORIMG HERE
+// $('#student-class-group-enrollment').html('<%= @class_group.name %>');
 $('td#class-enrollment-seat-number').html('<%= @class_group_enrollment.seat_number %>');
 showNotice("<%= render_flash %>");
