[spec/requests] refactored exams spec

--- a/core/app/views/gaku/exams/_exam_form.html.slim
+++ b/core/app/views/gaku/exams/_exam_form.html.slim
@@ -31,4 +31,4 @@
               = f.label :use_weighting, t("exam_portions.use_weighting"), :class => "help-inline"
     .row-fluid
       .span12.well
-        = f.submit nil, :id => 'submit_button', :class => "span12 btn btn-primary"
+        = f.submit nil, :id => 'submit-exam-button', :class => "span12 btn btn-primary"
