--- a/admissions/app/views/gaku/admin/admission_periods/_form.html.slim
+++ b/admissions/app/views/gaku/admin/admission_periods/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for [:admin, @admission_period], :remote => true do |admission_period_form|
+= nested_form_for [:admin, @admission_period], :remote => true do |admission_period_form|
   - if admission_period_form.object.new_record?
     b= t('admission_periods.new')
     .row-fluid.mt-l
@@ -11,6 +11,18 @@
         = admission_period_form.number_field :seat_limit
         = admission_period_form.label :admitted_on, t("admission_periods.admitted_on")
         = admission_period_form.date_select :admitted_on
+      .span12.well[style="margin-left: 0px; margin-top: 20px;"]
+        = admission_period_form.fields_for :admission_methods do |method_form|
+          = method_form.label :name, t("admission_methods.name")
+          = method_form.text_field :name, :class => "span12"
+          = method_form.link_to_remove t('admission_methods.remove')
+        p= admission_period_form.link_to_add t('admission_methods.add'), :admission_methods
+      .span12.well[style="margin-left: 0px; margin-top: 20px;"]
+        = admission_period_form.fields_for :admission_methods do |method_form|
+          = method_form.label :name, t("admission_methods.name")
+          = method_form.collection_select(:id, Gaku::AdmissionMethod.all(:order => 'name'), :id, :name, { :prompt => 'Select Admission Method' })
+          = method_form.link_to_remove t('admission_methods.remove')
+        p= admission_period_form.link_to_add t('admission_methods.add2'), :admission_methods
         .row-fluid
           .span12
             .span6
