--- a/admissions/app/views/gaku/admin/admission_periods/index.html.slim
+++ b/admissions/app/views/gaku/admin/admission_periods/index.html.slim
@@ -13,8 +13,11 @@
           th.btn-inverse =t('admission_periods.singular')
           th.btn-inverse =t('admission_periods.rolling')
           th.btn-inverse =t('admission_periods.seat_limit')
+          th.btn-inverse =t('admission_periods.methods')
           th.btn-inverse =t('admission_periods.admitted_on')
-          th.btn-info style="width:61px" =t('manage')
+          th.btn-info style="width:62px" =t('manage')
       tbody
         =render :partial => 'admission_period', :collection => @admission_periods, :as => 'admission_period'
     br/
+
+= javascript_include_tag "jquery_nested_form"
