fix admission periods index locale

--- a/admissions/app/views/gaku/admin/admission_periods/index.html.slim
+++ b/admissions/app/views/gaku/admin/admission_periods/index.html.slim
@@ -13,7 +13,7 @@
           th.btn-inverse =t('admission_periods.singular')
           th.btn-inverse =t('admission_periods.rolling')
           th.btn-inverse =t('admission_periods.seat_limit')
-          th.btn-inverse =t('admission_periods.methods')
+          th.btn-inverse =t('admission_methods.list')
           th.btn-inverse =t('admission_periods.admitted_on')
           th.btn-info style="width:62px" =t('manage')
       tbody
