--- a/admissions/app/views/gaku/admin/admissions/index.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/index.html.slim
@@ -7,9 +7,11 @@
   .span12.well
     .row-fluid
       .span6
-        = select :time, :id, {"2012:秋" => "2012/10/00", "2013:春" => "2013/04/00"}, {:prompt => "入学時期選択してください。"}, :class => "span12"
+        #admission-period-selection
+          = render 'gaku/admin/admissions/period', :admission_period => @admission_period
       .span6
-        = select :variety, :id, {"一般入試" => "general", "推薦入試" => "recommend"}, {:prompt => "入学種別選択してください。"}, :class => "span12"
+        #admission-method-selection
+          = render 'gaku/admin/admissions/method', :admission_methods => @admission_methods
     .row-fluid.mt-s
       .span12.well
         .row-fluid
@@ -23,34 +25,5 @@
 
             = button t("admissions.candidates.export"), "students.csv", :id => 'export-students-link', :class => 'btn'
         hr
-        .tabbable.mt-s
-          ul.nav.nav-tabs
-            li.active
-              a href="#phase1" data-toggle="tab"
-                = "Phase1 "
-            li style="margin:8px 15px 0px 15px"
-              i.icon-arrow-right style="background-image:url('/assets/bootstrap/glyphicons-halflings.png')"
-            li
-              a href="#phase2" data-toggle="tab"
-                = "Phase2"
-            li style="margin:8px 15px 0px 15px"
-              i.icon-arrow-right style="background-image:url('/assets/bootstrap/glyphicons-halflings.png')"
-            li
-              a href="#phase3" data-toggle="tab"
-                = "Phase3"
-          .tab-content
-            #phase1.tab-pane.active
-              .row-fluid.mt-l
-                #new-student.hide
-                  /= render 'form'
-                =render 'student_chooser'
-            #phase2.tab-pane
-              .row-fluid.mt-l
-                #new-student.hide
-                  /= render 'form'
-                =render 'student_chooser'
-            #phase3.tab-pane
-              .row-fluid.mt-l
-                #new-student.hide
-                  /= render 'form'
-                =render 'student_chooser'
+        #admission-phases
+          = render 'gaku/admin/admissions/phases', :admission_method => @admission_periods.last.admission_methods.first
