WIP refactor exam portions

--- a/core/app/views/gaku/exams/exam_portions/_exam_portion_form.html.slim
+++ b/core/app/views/gaku/exams/exam_portions/_exam_portion_form.html.slim
@@ -26,7 +26,8 @@
                 = ep_form.label t 'exam_portions.adjustments'
                 = ep_form.text_area :adjustments, :class => "span12", :size => "0x2"
           .row-fluid
-            = ep_form.submit nil, :class => "span12 btn btn-primary"
+            = ep_form.submit nil, :class => "span6 btn btn-primary", :id => 'submit-exam-exam-portion-button'
+            = link_to_cancel :id => "cancel-exam-exam-portion-link"
 
 
 coffee:
