--- a/core/app/views/gaku/exams/exam_portions/create_exam_portion.js.erb
+++ b/core/app/views/gaku/exams/exam_portions/create_exam_portion.js.erb
@@ -1,5 +1,5 @@
-$('#exam_exam_portions_form').slideToggle();
-$('#exam_exam_portions_form form').each (function(){
+$('#new-exam-exam-portion').slideToggle();
+$('#new-exam-exam-portion form').each (function(){
   this.reset();
 });
 showNotice("<%= render_flash %>");
