[view] refactor note widget for enrollment status

--- a/core/app/views/gaku/students/enrollment_statuses/notes/_note.html.slim
+++ b/core/app/views/gaku/students/enrollment_statuses/notes/_note.html.slim
@@ -1,8 +1,5 @@
 -unless note.nil? or note.new_record? or !note
 	tr id="note-#{note.id}"
-    td =truncate note.title, :length => 25
-    td =truncate note.content, :length => 30
+    td =link_to note.title, [@student, @enrollment_status, note], :remote => true  
     td
-			=ajax_link_to_show [@student, @enrollment_status, note]
-			=ajax_link_to_edit [:edit, @student, @enrollment_status, note]
 			=ajax_link_to_delete [@student, @enrollment_status, note]
