--- a/core/app/views/gaku/exams/exam_portions/_exam_portions.html.slim
+++ b/core/app/views/gaku/exams/exam_portions/_exam_portions.html.slim
@@ -1,6 +1,6 @@
 - if @exam.exam_portions.any?
   .row-fluid
-    table.table.table-striped.table-bordered.table-condensed
+    table#exam-exam-portions-index.index.table.table-striped.table-bordered.table-condensed
       thead
         tr
           th.btn-inverse =t 'exam_portions.name'
