--- a/core/app/views/gaku/exams/exam_portions/_edit_modal.html.slim
+++ b/core/app/views/gaku/exams/exam_portions/_edit_modal.html.slim
@@ -1,6 +1,6 @@
 - model = @exam_portion || ExamPortion.new
 - model_class = model.class
-.modal.hide#edit-exam-portion-modal wmode="opaque"
+.modal.hide#edit-exam-exam-portion-modal wmode="opaque"
   
   = form_for([@exam, model], :remote => true, :html => {:'data-type' => 'script', :class => 'form-horizontal' }) do |ep_form| 
 
@@ -36,7 +36,5 @@
                   = ep_form.label t 'exam_portions.adjustments'
                   = ep_form.text_area :adjustments, :class => "span12", :size => "0x2"
               .row-fluid
-                .span12
-                  .span6 
-                    = ep_form.submit t("exam_portions.save"), :class => "span12 btn btn-primary", :style => "min-height:0px; float: left;"
-                    = link_to t('.cancel', :default => t("helpers.links.cancel")), '#', :class => 'btn', :'data-dismiss' => "modal"
+                  = ep_form.submit t("exam_portions.save"), :class => "span6 btn btn-primary", :id => 'submit-exam-exam-portion-button'
+                  = link_to_cancel :id => "cancel-exam-exam-portion-link", :'data-dismiss' => "modal"
