--- a/core/app/views/gaku/exams/exam_portions/create_exam_portion.js.erb
+++ b/core/app/views/gaku/exams/exam_portions/create_exam_portion.js.erb
@@ -4,9 +4,9 @@ $('#new-exam-exam-portion form').each (function(){
 });
 showNotice("<%= render_flash %>");
 
-$('#exam-exam_portions table tbody').append('<%= render_js_partial("gaku/exams/exam_portions/show", {:exam_portion => @exam.exam_portions.last}) %>');
+$('#exam-exam-portions-index tbody').append('<%= render_js_partial("gaku/exams/exam_portions/show", {:exam_portion => @exam.exam_portions.last}) %>');
 
-$('.exam-portions-count').html("<%= t('exam_portions.list') + ' ( ' + @exam.exam_portions.count.to_s + ' )' %>");
+$('.exam-exam-portions-count').html("<%= t('exam_portions.list') + ' ( ' + @exam.exam_portions.count.to_s + ' )' %>");
 
 <% if @exam.use_weighting? %>
   
