--- a/core/app/views/gaku/exams/exam_portions/edit.js.erb
+++ b/core/app/views/gaku/exams/exam_portions/edit.js.erb
@@ -1,2 +1,2 @@
 $('#modal-dialogs').html('<%== render_js_partial("gaku/exams/exam_portions/edit_modal", {:exam_portion => @exam_portion}) %>');
-$('#edit-exam-portion-modal').modal('show');
+$('#edit-exam-exam-portion-modal').modal('show');
