[controllers][views][migrations][models] Refactor admissions and develop admissions widget [WIP]

--- a/admissions/app/views/gaku/admin/admissions/_phases.html.slim
+++ b/admissions/app/views/gaku/admin/admissions/_phases.html.slim
@@ -13,4 +13,4 @@
         .row-fluid.mt-l
           #new-student.hide
             /= render 'form'
-          =render 'student_chooser', :admission_phase_states => phase.admission_phase_states
+          =render 'phase', :admission_phase_states => phase.admission_phase_states
