--- a/core/app/views/gaku/students/enrollment_statuses/_enrollment_status.html.slim
+++ b/core/app/views/gaku/students/enrollment_statuses/_enrollment_status.html.slim
@@ -4,3 +4,5 @@ span#enrolled-status style='margin-right:3px'
 =link_to 'Change Enrollment Status', edit_student_enrollment_status_path(student, student.enrollment_status), :remote => true, :id => 'edit-student-enrollment-status-link'
 =" | " 
 =link_to 'Notes', student_enrollment_status_notes_path(student, student.enrollment_status), :remote => true
+=" | " 
+=link_to 'History', [:history, student, student.enrollment_status], :remote => true 
