Trying to prepare assets for production

--- a/core/app/assets/stylesheets/gaku/gaku_core.css
+++ b/core/app/assets/stylesheets/gaku/gaku_core.css
@@ -19,4 +19,5 @@
  *= require gaku/tbs_datepicker/css/datepicker
  *= require gaku/jquery_validation_engine/validationEngine.jquery.css
  * require chosen
+ *= require gaku/devise/sessions.css
 */
