--- a/core/app/views/gaku/layouts/gaku.html.slim
+++ b/core/app/views/gaku/layouts/gaku.html.slim
@@ -3,9 +3,9 @@ html
   head
     title
       = content_for?(:title) ? yield(:title) + " | GAKUEngine" : "GAKUEngine"
-    = stylesheet_link_tag    "all"
+    = stylesheet_link_tag "gaku/all"
     = stylesheet_link_tag    params[:controller] if Rails.application.assets.find_asset("#{params[:controller]}.css")
-    = javascript_include_tag "all" 
+    = javascript_include_tag "gaku/all" 
     = javascript_include_tag params[:controller] if Rails.application.assets.find_asset("#{params[:controller]}.js")
     = csrf_meta_tags
   body
